fix: overflow options

--- a/packages/core/src/components/table/table-body-row-expandable/table-body-row-expandable.scss
+++ b/packages/core/src/components/table/table-body-row-expandable/table-body-row-expandable.scss
@@ -70,9 +70,12 @@
       color: var(--tds-table-color);
     }
 
-    .tds-table__cell-expand-visible {
-      color: var(--tds-table-color);
-      padding: 16px 16px 16px 66px;
+    .tds-table__cell-expand--overflow-visible {
+      overflow: visible;
+    }
+
+    .tds-table__cell-expand--overflow-hidden {
+      overflow: hidden;
     }
   }
 }
